--- a/styles/About.css
+++ b/styles/About.css
@@ -1,14 +1,24 @@
+header.main-header {
+  background-color: rgba(2, 47, 94, 1); /* Set a slight transparency for header */
+  position: fixed; /* Fix the header to the viewport */
+  top: 0; /* Position the header at the top of the viewport */
+  left: 0; /* Position the header at the left of the viewport */
+  width: 100%; /* Set the width to 100% of the viewport */
+  height: 110px;
+  z-index: 2;
+}
+
 #header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px;
+    padding: 5px;
   }
   
   #logo-container {
     display: flex;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 20px;
   }
   
   #title-container {
@@ -20,13 +30,16 @@
   #title-line1,
   #title-line2 {
     margin: 0;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
   }
   
   nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    margin-right: 100px;
+    margin-right: 20px;
   }
   
   nav li {
@@ -37,8 +50,9 @@
   
   nav a {
     text-decoration: none;
-    color: black;
-    font-size: 16px;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
     transition: color 0.3s ease;
   }
   
@@ -51,11 +65,16 @@
       height: 300px;
     }
   }
+
+  body{
+    font-family: "Arial", sans-serif;
+}
   
   body,
   html {
     height: 100%;
     margin: 0;
+    padding: 0;
   }
   
   .mission-text {
@@ -71,6 +90,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 10%;
   }
   
   .doctrine-scripts img {
