--- a/styles/Home.css
+++ b/styles/Home.css
@@ -82,20 +82,20 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-  }
+}
 .slider .slides {
     height: 100%; 
-  }
+}
   
 .slides {
     display: flex;
     width: 100%;
     height: 100%;
     position: relative; 
-    /*transition: transform 0.5s ease-in-out;  Smooth image transitions */
+    transition: transform 0.5s ease-in-out;  
 }
   
-  .slide {
+.slide {
     flex: 0 0 100%; 
     position: absolute; 
     top: 0;
@@ -106,7 +106,7 @@ body, html {
     align-items: center; 
     justify-content: center; 
     overflow: hidden; 
-  }
+}
   
 .slide-img {
     width: 100%; 
@@ -115,16 +115,16 @@ body, html {
     transition: transform 0.5s ease-in-out;
 }
   
-  
 .slide.active {
     opacity: 1; 
     transform: translateX(0); 
+    transition: transform 0.8s ease-in-out, opacity 0.8s ease-in-out;
   }
   
   
 .slide:not(.active) {
     opacity: 0; 
-    transition: transform 0.5s ease-in-out, opacity 0.3s ease-in-out; /* Adjust transition for inactive slides */
+    transition: transform 0.8s ease-in-out, opacity 0.8s ease-in-out; 
   }
 
 
@@ -169,13 +169,13 @@ body, html {
   
   .poster.active {
     opacity: 1; 
-    z-index: 1; 
+    z-index: 1;
   }
   
   .poster:not(.active) {
     opacity: 0; 
     z-index: 0; 
-    transform: translateX(100%); /* Position inactive slides off-screen to the right */
+    transform: translateX(100%); 
   }
   
   .poster img {
