updated give page

--- a/styles/Media.css
+++ b/styles/Media.css
@@ -86,6 +86,7 @@ opacity: 0.5; /* Adjust the opacity value as needed */
   justify-content: space-between;
   align-items: center;
   padding: 50px;
+  color:#022f5e;
 
 }
 
