--- a/styles/About.css
+++ b/styles/About.css
@@ -59,6 +59,36 @@ header.main-header {
   nav a:hover {
     color: blue;
   }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+
+  }
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white ;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+.dropdown-content a {
+    color: blue;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
   
   @media (max-width: 768px) {
     .slider-placeholder {
