--- a/styles/Home.css
+++ b/styles/Home.css
@@ -277,8 +277,7 @@ body, html {
     color: white;
     text-align: center;
     padding-top: 10px;
-    margin-top: auto;
-    
+    margin-top: auto;  
 }
 
 .footer-content {
@@ -329,8 +328,21 @@ body, html {
 }
 
 .copyright {
-    margin-top: auto;
-    text-align: left;
+    display: flex;
+
+}
+
+.admin-page-button {
+    background-color:green;
+    color: white; 
+    font-size: 16px; 
+    text-decoration: none; 
+    box-sizing: border-box;
+    padding: 0px 10px;
+}
+.admin-button{
+    margin-left: 698px;
+    margin-top: 31px;
 }
 
 .fa {
